--- a/index.html
+++ b/index.html
@@ -9,46 +9,58 @@
 <h1>User profile</h1>
 <div class="profile">
 <form>
-    <label for="first">First name*</label>
-    <input type="text" id="first">
-
+    <div class="forms">
+    <label for="first">First name</label>
+    <input type="text" id="first"  placeholder="Иван" required>
+    </div>
+    <div class="forms">
     <label for="last">Last name</label>
-    <input type="text" id="last">
-
+    <input type="text" id="last" placeholder="Иванов">
+    </div>
+    <div class="forms">
     <label for="surname">Surname</label>
-    <input type="text" id="surname">
-
+    <input type="text" id="surname" placeholder="Иванович">
+    </div>
+    <div class="forms">
     <label for="birth">Birth date</label>
     <input type="date" id="birth">
+    </div>
 
-    <fieldset>
+    <fieldset class="forms">
         <legend>Gender</legend>
+            <div class="forms">
             <label for="gender">Male</label>
             <input type="radio" id="gender">
-
+            </div>
+            <div class="forms">
             <label for="gender2">Female</label>
             <input type="radio" id="gender2">
+            </div>
     </fieldset>
 
-
+    <div class="forms">
     <label for="e-mail">E-mail</label>
-    <input type="email" id="e-mail">
-
+    <input type="email" id="e-mail" placeholder="e-mail-address@gmail.com">
+    </div>
+    <div class="forms">
     <label for="number">Phone number</label>
-    <input type="number" id="number">
-
+    <input type="number" id="number" placeholder="+375293333333">
+    </div>
+    <div class="forms">
     <label for="country">Country</label>
     <input type="text" id="country">
-
+    </div>
+    <div class="forms">
     <label for="address">Adress</label>
     <input type="text" id="address">
-
+    </div>
     <span class="checkbox">
         <label for="check" class="checkbox">I accept the terms in the <a href="https://www.google.com/">license agreement</a></label>
         <input type="checkbox" id="check">
     </span>
-
+    <div class="button">
     <input type="submit" value="Save">
+    </div>
 </form>
 </div>
 
